Social Media Optimized

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Weavernote - Transform your ideas into organized brilliance. A modern note-taking app designed for the way your mind works." />
+    <meta name="description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
     <meta name="theme-color" content="#eab308" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weavernote.com/" />
+    <meta property="og:title" content="Weave your thoughts, empower your creativity" />
+    <meta property="og:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
+    <meta property="og:image" content="./media/banner.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://weavernote.com/" />
+    <meta name="twitter:title" content="Weave your thoughts, empower your creativity" />
+    <meta name="twitter:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
+    <meta name="twitter:image" content="./media/banner.png" />
     <title>Weavernote</title>
   </head>
   <body>
