Social media URL

--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
     <meta name="theme-color" content="#eab308" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="%VITE_SITE_URL%" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://weavernote.com/" />
+    <meta property="og:site_name" content="Weavernote" />
+    <meta property="og:url" content="%VITE_SITE_URL%" />
     <meta property="og:title" content="Weave your thoughts, empower your creativity" />
     <meta property="og:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
-    <meta property="og:image" content="./media/banner.png" />
+    <meta property="og:image" content="%VITE_SITE_URL%/banner.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://weavernote.com/" />
+    <meta name="twitter:url" content="%VITE_SITE_URL%" />
     <meta name="twitter:title" content="Weave your thoughts, empower your creativity" />
     <meta name="twitter:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
-    <meta name="twitter:image" content="./media/banner.png" />
+    <meta name="twitter:image" content="%VITE_SITE_URL%/banner.png" />
     <title>Weavernote</title>
   </head>
   <body>
