--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
+    <meta name="description" content="Connected Notes and AI summaries, quizzes, flashcards" />
     <meta name="theme-color" content="#eab308" />
     <!-- Canonical URL -->
     <link rel="canonical" href="%VITE_SITE_URL%" />
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Weavernote" />
     <meta property="og:url" content="%VITE_SITE_URL%" />
-    <meta property="og:title" content="Weave your thoughts, empower your creativity" />
-    <meta property="og:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
+    <meta property="og:title" content="Weavernote - Connected Notes and AI Learning Tools" />
+    <meta property="og:description" content="Transform your notes with AI-powered summaries, quizzes, and flashcards. Connect your knowledge, learn smarter." />
     <meta property="og:image" content="%VITE_SITE_URL%/banner.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <!-- Twitter -->
+    <meta property="og:image:alt" content="Weavernote - Note-taking and Learning Platform" />
+    <!-- X (Twitter) -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:domain" content="weavernote.com" />
     <meta name="twitter:url" content="%VITE_SITE_URL%" />
-    <meta name="twitter:title" content="Weave your thoughts, empower your creativity" />
-    <meta name="twitter:description" content="Weave Your Notes into Knowledge. Smarter, Faster, Better." />
+    <meta name="twitter:title" content="Weavernote - Connected Notes and AI Learning Tools" />
+    <meta name="twitter:description" content="Transform your notes with AI-powered summaries, quizzes, and flashcards. Connect your knowledge, learn smarter." />
     <meta name="twitter:image" content="%VITE_SITE_URL%/banner.png" />
-    <title>Weavernote</title>
+    <meta name="twitter:image:alt" content="Weavernote - Note-taking and Learning Platform" />
+    <!-- Additional SEO -->
+    <meta name="author" content="Weavernote" />
+    <meta name="keywords" content="note-taking, AI summaries, flashcards, quizzes, knowledge management, learning tools" />
+    <title>Weavernote - Connected Notes and AI Learning Tools</title>
   </head>
   <body>
     <div id="root"></div>
