--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="%VITE_SITE_URL%" />
     <meta property="og:title" content="Weavernote - Connected Notes and AI Learning Tools" />
     <meta property="og:description" content="Transform your notes with AI-powered summaries, quizzes, and flashcards. Connect your knowledge, learn smarter." />
-    <meta property="og:image" content="%VITE_SITE_URL%/banner.png" />
+    <meta property="og:image" content="https://weavernote.com/banner.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Weavernote - Note-taking and Learning Platform" />
@@ -24,7 +24,7 @@
     <meta name="twitter:url" content="%VITE_SITE_URL%" />
     <meta name="twitter:title" content="Weavernote - Connected Notes and AI Learning Tools" />
     <meta name="twitter:description" content="Transform your notes with AI-powered summaries, quizzes, and flashcards. Connect your knowledge, learn smarter." />
-    <meta name="twitter:image" content="%VITE_SITE_URL%/banner.png" />
+    <meta name="twitter:image" content="https://weavernote.com/banner.png" />
     <meta name="twitter:image:alt" content="Weavernote - Note-taking and Learning Platform" />
     <!-- Additional SEO -->
     <meta name="author" content="Weavernote" />
